--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark mr-0">
         <div class="container ">
             <div class="hhhs__s">
-                <a class="navbar-brand navimg" href="#"><img src="https://github.com/Wakarmujtaba/webdeveloper/assets/139910284/c83f83dd-5dd9-4b35-b404-f750e5aecd1b" alt="logo"></a>
+                <a class="navbar-brand navimg" href="#"><img src="images/wakarlogo.JPG" alt="logo"></a>
                 <button class="navbar-toggler " type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -94,7 +94,7 @@
                     <p style="font-size: 20px;"><b> Web Developer based In New Delhi</b></p>
                     <a class="btn btn-primary pt-3 connect" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal"> Get Connected</a>
                 </div>
-                <div class="col-lg-6 mainn2"><img src="images/wakar.jpg" alt=""></div>
+                <div class="col-lg-6 mainn2"><img src="https://github.com/Wakarmujtaba/webdeveloper/assets/139910284/c83f83dd-5dd9-4b35-b404-f750e5aecd1b" alt=""></div>
             </div>
         </div>
     </div>
