--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <div class="row mtt">
             <div class="col-12">
                 <div class="row">
-                    <div class="col-md-6 myyimg"><img src="images/wakar2.jpg" alt=""> </div>
+                    <div class="col-md-6 myyimg"><img src="https://github.com/Wakarmujtaba/webdeveloper/issues/2#issue-1810641996" alt=""> </div>
 
                     <div class="col-md-6 myy">
                         <h1 class="mt-3 mb-4">About Me</h1>
