--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark mr-0">
         <div class="container ">
             <div class="hhhs__s">
-                <a class="navbar-brand navimg" href="#"><img src="https://github.com/Wakarmujtaba/webdeveloper/assets/139910284/3fbea8ea-b3d7-4901-814c-01e80aa30875
-" alt="logo"></a>
+                <a class="navbar-brand navimg" href="#"><img src="images/wakarlogo.JPG" alt="logo"></a>
                 <button class="navbar-toggler " type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
