--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                                 </div>
                                 <div class="inn__D">
                                     <h4>Freelance </h4>
-                                    <p> Avilable</p>
+                                    <p> available</p>
                                 </div>
 
 
