--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
 
             <div class="col-md-8 ">
 
-              <form action="" method="POST" class="formmm" >
+              <form action="#!" method="POST" class="formmm" >
                 
               <input type="text" placeholder="Your Name" name="name" class="formm required">
               <input type="email" placeholder="Your Email" name="email" class="formm required"><br>
