--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
 
             <div class="col-md-8 ">
 
-              <form action="#!" method="POST" class="formmm" >
+              <form action="#!" method="" class="formmm" >
                 
               <input type="text" placeholder="Your Name" name="name" class="formm required">
               <input type="email" placeholder="Your Email" name="email" class="formm required"><br>
@@ -634,7 +634,7 @@
                 <div class="col-md-6">
                     <div class="contact_left">
 
-                        <form action="" method="POST" class="formmm" >
+                        <form action="#!" method="" class="formmm" >
 
                             <input type="text" placeholder="Your Name" name="name" class="formm required">
                             <input type="email" placeholder="Your Email" name="email" class="formm required">
