--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
                                 </div>
                                 <div class="addd">
                                     <h2>Address</h2>
-                                    <p>Zalir Nagar Delhi</p>
+                                    <p>Zakir Nagar Delhi</p>
                                 </div>
                             </li>
                             <li>
