--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
                     <i class="fa fa-location-dot iconcoll ff"></i>
                     <div style="float: left; padding-top: 30px; color: white;">
                       <h2>Address</h2>
-                      <span>Zalir Nagar Delhi</span>
+                      <span>Zakir Nagar Delhi</span>
                     </div>
                 </div>
                  
