--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <a class="nav-link" href="#services">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#clients">FOLLOW US</a>
+                        <a class="nav-link" href="#clients">Follow Us</a>
                     </li>
 
                     <li class="nav-item">
@@ -808,7 +808,7 @@
         <div class="row ">
             <div class="col-12 jkjk">
                 <h5 style="color: white; text-align: center; margin-top: 50px;">Developed with love by Wakar Mujtaba ©
-                    2023</h5>
+                    2024</h5>
             </div>
         </div>
     </div>
