--- a/index.html
+++ b/index.html
@@ -377,7 +377,26 @@
                                 aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
-
+                    <div class="col-md-5 mt-4">
+                        <div>
+                            <span style="float: left; color: white;">Livewire</span>
+                            <span class="progbrm"></span>
+                        </div>
+                        <div class="progress" style="height: 10px; margin-right: 60px;">
+                            <div class="progress-bar progbar" role="progressbar" style="width: 55%" aria-valuenow="5"
+                                aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                        <div class="col-md-5 mt-4">
+                        <div>
+                            <span style="float: left; color: white;">GIT</span>
+                            <span class="progbrm"></span>
+                        </div>
+                        <div class="progress" style="height: 10px; margin-right: 60px;">
+                            <div class="progress-bar progbar" role="progressbar" style="width: 55%" aria-valuenow="5"
+                                aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
 
                 </div>
             </div>
