--- a/index.html
+++ b/index.html
@@ -224,10 +224,10 @@
                                     <h4>Degree </h4>
                                     <p>Bachelors</p>
                                 </div>
-                                <div class="inn__D">
+                            <!-- <div class="inn__D">
                                     <h4>Freelance </h4>
                                     <p> available</p>
-                                </div>
+                                </div> -->
 
 
                             </div>
