--- a/index.html
+++ b/index.html
@@ -425,7 +425,9 @@
                         <i class="fa-solid fa-computer iconcol"></i>
 
                         <h5><b> Website Design</b></h5>
-                        <span>Need a stunning website that captures attention and drives results? Look no further! As a freelance web designer, I specialize in creating custom, responsive websites with a focus on intuitive user experiences. With a modern and engaging design approach, I'll help you establish a strong online presence that leaves a lasting impression on your visitors. Let's collaborate and bring your website vision to life! Contact me today</span>
+                        <span>
+                            Need a stunning website that captures attention and drives results? Look no further! I specialize in creating custom, responsive websites with a focus on intuitive user experiences. With a modern and engaging design approach, I'll help you establish a strong online presence that leaves a lasting impression on your visitors. Let's collaborate and bring your website vision to life! Contact me today
+                        </span>
                     </div>
 
                     <div class="col-md-3 m-3 p-3 mainhh">
