--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
         <div class="row " id="services">
             <div class="col-lg-12 sk">
                 <p style="color: #00c0ff; text-align: center;font-size: 30px;"><b>Services</b></p>
-                <h1 class=""><b>What I Do for My Clients</b></h1> <br>
+                <h1 class=""><b>What I Do </b></h1> <br>
             </div>
         </div>
     </div>
@@ -525,7 +525,7 @@
     <div class="row mt-3">
         <div class="col-lg-12 sk">
             <p style="color: #00c0ff; text-align: center;font-size: 30px;"><b>Youtube</b></p> 
-            <h1 class=""><b>What I Do for My Clients</b></h1> <br>
+            <h1 class=""><b>What I Do </b></h1> <br>
         </div>
     </div>
         </div>
@@ -655,7 +655,7 @@
                 <div class="col-md-6">
                     <div class="contact_left">
 
-                        <form action="#!" method="" class="formmm" >
+                        <form action="#!" method="" class="formmm" id="contactForm">
 
                             <input type="text" placeholder="Your Name" name="name" class="formm required">
                             <input type="email" placeholder="Your Email" name="email" class="formm required">
