--- a/index.html
+++ b/index.html
@@ -857,6 +857,7 @@
 <script>
     $(document).ready(function() {
         $('#contactForm').on('submit', function(e) {
+alert("Please fill out all required fields.");
             var isValid = true;
             
             // Check all required fields
