--- a/index.html
+++ b/index.html
@@ -32,15 +32,21 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body hhhs_7ggh">
-              <form action="#">
-                <input type="text" name="" id="" placeholder="Name">
-                <input type="text" name="" id="" placeholder="Email">
-                <input type="text" name="" id="" placeholder="Phone">
-
-                <textarea name="" id="" rows="5" placeholder="Message"></textarea>
-
-                <button type="submit">Submit</button>
-              </form>
+              <form action="#" onsubmit="return validateForm()">
+  <label for="name">Name:</label>
+  <input type="text" name="name" id="name" placeholder="Name" required>
+  
+  <label for="email">Email:</label>
+  <input type="email" name="email" id="email" placeholder="Email" required>
+  
+  <label for="phone">Phone:</label>
+  <input type="tel" name="phone" id="phone" placeholder="Phone" pattern="[0-9]{10}" required>
+  
+  <label for="message">Message:</label>
+  <textarea name="message" id="message" rows="5" placeholder="Message" required></textarea>
+  
+  <button type="submit">Submit</button>
+</form>
             </div>
           
           </div>
@@ -876,6 +882,21 @@
             }
         });
     });
+</script>
+    <script>
+  function validateForm() {
+    const name = document.getElementById("name").value;
+    const email = document.getElementById("email").value;
+    const phone = document.getElementById("phone").value;
+    const message = document.getElementById("message").value;
+
+    if (!name || !email || !phone || !message) {
+      alert("All fields are required.");
+      return false;
+    }
+    
+    return true;  // Form is valid
+  }
 </script>
 </body>
 
