--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body hhhs_7ggh">
-              <form action="#" onsubmit="return validateForm()">
+            <form action="https://api.web3forms.com/submit" method="POST" onsubmit="return validateForm()">
+                <!-- Replace with your Access Key -->
+    <input type="hidden" name="access_key" value="c8a39932-3a49-4a66-bbd9-3dd2577b69ae">
   <label for="name">Name:</label>
   <input type="text" name="name" id="namee" placeholder="Name" required>
   
@@ -661,8 +663,9 @@
 
                 <div class="col-md-6">
                     <div class="contact_left">
-
-                        <form action="#!" method="" class="formmm" id="contactForm">
+                            <form action="https://api.web3forms.com/submit" method="POST" class="formmm" id="contactForm">
+                            <!-- Replace with your Access Key -->
+                            <input type="hidden" name="access_key" value="c8a39932-3a49-4a66-bbd9-3dd2577b69ae">
 
                             <input type="text" placeholder="Your Name" name="name" class="formm required">
                             <input type="email" placeholder="Your Email" name="email" class="formm required">
